@@ -28,6 +28,7 @@
     * Added new painters "Service check command expanded" and
       "Host check command expanded"
     * FIX: Corrected garbled description for sorter "Service Performance data" 
+    * Dashboard globes can now be filtered by host_contact_group/service_contact_group
 
     Livestatus:
     * Added new table statehist, used for SLA queries
